--- a/_src/css/common.scss
+++ b/_src/css/common.scss
@@ -15,4 +15,5 @@
 
 @use "common/05_index/_00_index" as index;
 @use "common/05_index/_01_mv" as mv;
-@use "common/05_index/_02_tabs" as tabs;
+@use "common/05_index/_02_banner" as banner;
+@use "common/05_index/_03_tabs" as tabs;
