--- a/_src/css/common/05_index/_00_index.scss
+++ b/_src/css/common/05_index/_00_index.scss
@@ -10,7 +10,12 @@
   padding-bottom: 107px;
 
   @include mq('small') {
-    padding-top: 61px;
-    padding-bottom: 114px;
+    padding-top: vw-s(61);
+    padding-bottom: vw-s(114);
+  }
+
+  @include mq('medium2') {
+    padding-top: vw-m(61);
+    padding-bottom: vw-m(114);
   }
 }
