--- a/_src/css/common/01_commons/_02_common.scss
+++ b/_src/css/common/01_commons/_02_common.scss
@@ -9,10 +9,11 @@
 body {
   color: #333333;
   font-size: 16px;
-  line-height: 1.75;
+  line-height: 1.4;
   font-family: "Noto Sans JP", sans-serif;
   font-feature-settings: "palt";
   -webkit-text-size-adjust: 100%;
+  overflow-x: hidden;
   @include mq('large') {
     font-size: 16px;
   }
@@ -20,7 +21,7 @@ body {
     @include fz-m(16);
   }
   @include mq('small') {
-    font-size: 12px;
+    @include fz-s(12);
   }
 }
 
@@ -50,33 +51,37 @@ sub {
   vertical-align: bottom;
 }
 
-.f-roboto {
+.f_roboto {
   font-family: "Roboto", sans-serif;
   font-weight: 900;
 }
 
-.c-img-cover {
+.c_img_cover {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.l-container {
+.c_w_100 {
+  width: 100%;
+}
+
+.l_container {
   max-width: 1440px;
   width: 100%;
   margin: 0 auto;
 }
 
-.c-inner {
+.c_inner {
   max-width: 1240px;
   width: 100%;
   margin: 0 auto;
 
-  @include mq('medium') {
-    padding: 0 50px;
+  @include mq('medium2') {
+    max-width: vw-m(1240);
   }
 
   @include mq('small') {
-    padding: 0 20px;
+    padding: 0  vw-s(20);
   }
 }
