--- a/_src/css/common.scss
+++ b/_src/css/common.scss
@@ -17,3 +17,4 @@
 @use "common/05_index/_01_mv" as mv;
 @use "common/05_index/_02_banner" as banner;
 @use "common/05_index/_03_tabs" as tabs;
+@use "common/05_index/_04_navi_under" as navi_under;
