--- a/_src/css/common/03_components/_font.scss
+++ b/_src/css/common/03_components/_font.scss
@@ -6,20 +6,7 @@
 // font
 //
 
-
-
-
-.font_red {
-  color: $color-red;
-}
-.font_em {
-  color: $color-red;
+.f_roboto {
+  font-family: "Roboto", sans-serif;
   font-weight: 900;
-}
-.font_w9 {
-  font-weight: 900;
-}
-
-.font_num {
-  font-family: "Oswald", sans-serif;
 }
