--- a/_src/css/common/01_commons/_02_common.scss
+++ b/_src/css/common/01_commons/_02_common.scss
@@ -59,13 +59,13 @@ sub {
 }
 
 .l_container {
-  max-width: 1440px;
+  max-width: vw-min(1440);
   width: 100%;
   margin: 0 auto;
 }
 
 .c_inner {
-  max-width: 1240px;
+  max-width: vw-min(1240);
   width: 100%;
   margin: 0 auto;
 
@@ -75,11 +75,11 @@ sub {
 }
 
 /* Scale layout */
-@include mq-gt('small') {
-  html, body {
-    min-width: #{ $break-large }px;
-  }
-}
+// @include mq-gt('small') {
+//   html, body {
+//     min-width: #{ $break-large }px;
+//   }
+// }
 
 /* js animation up */
 .js-anima-up {
