--- a/_src/css/common/05_index/_00_index.scss
+++ b/_src/css/common/05_index/_00_index.scss
@@ -6,7 +6,7 @@
 //
 .sec_content {
   background: url(/special_contents/kokusai/docomo_kokusai/images/bg.png) repeat;
-  padding-top: 96px;
+  padding-top: vw-min(96);
 
   @include mq('small') {
     padding-top: vw-s(61);
