--- a/_src/css/common.scss
+++ b/_src/css/common.scss
@@ -4,6 +4,7 @@
 @use "common/01_commons/_02_common" as common;
 
 @use "common/03_components/_font" as font;
+@use "common/03_components/_button" as button;
 @use "common/03_components/_utility" as utility;
 
 @use "common/04_modules/_header" as header;
