--- a/_src/css/common/00_base/_02_mixin.scss
+++ b/_src/css/common/00_base/_02_mixin.scss
@@ -13,6 +13,11 @@
       @content;
     }
   }
+  @else if $size == 'medium2' {
+    @media print, screen and (min-width: 768px) and (max-width: 1439px) {
+      @content;
+    }
+  }
   @else if $size == 'large' {
     @media screen and (max-width: #{ $break-large }px) {
       @content;
