--- a/_src/css/common/05_index/_04_navi_under.scss
+++ b/_src/css/common/05_index/_04_navi_under.scss
@@ -5,115 +5,91 @@
 //
 // Navi Under
 //
-.navi_under {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  z-index: 1000;
-  background-color: rgba(0, 0, 0, .5);
-  width: 100%;
-  height: vw-min(100);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  display: none;
-  &.active {
-    display: flex;
-  }
-
-  @include mq('small') {
-    height: vw-s(60);
-  }
-  &_wrap {
-    max-width: vw-min(1000);
+.navi {
+  &_under {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, .6);
     width: 100%;
-    margin: 0 auto;
+    height: auto;
+    padding: vw-min(50);
     display: flex;
     justify-content: center;
     align-items: center;
-    @include mq('small') {
-      padding: 0 vw-s(10);
+    display: none;
+    &.active {
+      display: flex;
     }
+  
+    @include mq('small') {
+      padding: vw-s(20);
 
+      &.is-01 {
+      }
+    }
+  
+    &_wrap {
+      width: max-content;
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  
+      @include mq('small') {
+        padding: 0 vw-s(10);
+      }
+    }
+  
     .button {
-      &s {
-        width: 100%;
+      &_wrap {
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: vw-min(20);
-
+        gap: 40px;
+  
         @include mq('small') {
           gap: vw-s(10);
         }
       }
-      &.is-blue {
-        background-color: #2A238F;
-        .link {
-          &::after {
-            width: vw-min(12);
-            height: vw-min(20);
-            background-image: url("data:image/svg+xml,%3Csvg width='12' height='20' viewBox='0 0 12 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.98438 2.4751L9.01562 10.4751L1.98438 18.4751' stroke='white' stroke-width='3' stroke-linecap='round'/%3E%3C/svg%3E%0A");
+      &_title {
+        font-size: vw-min(24);
+        font-weight: 700;
+        color: #fff;
+        line-height: 1.1;
+        text-align: center;
+        margin-bottom: vw-min(47);
   
-            @include mq('small') {
-              width: vw-s(9);
-              height: vw-s(16);
-            }
-          }
-        }
-        &:hover {
-          background-color: #7E77E9;
+        @include mq('small') {
+          font-size: vw-s(13);
+          margin-bottom: vw-s(37);
         }
       }
-      &.is-red {
-        background-color: #CC0033;
-        .link {
-          &::after {
-            width: vw-min(21);
-            height: vw-min(15);
-            background-image: url("data:image/svg+xml,%3Csvg width='21' height='15' viewBox='0 0 21 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='3.67139' y='0.75' width='15.9714' height='9.8' stroke='white'/%3E%3Cpath d='M0.857117 4.49268V13.7498H17.0571' stroke='white'/%3E%3C/svg%3E%0A");
+      &_list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: vw-min(20);
   
-            @include mq('small') {
-              width: vw-s(19);
-              height: vw-s(13);
-            }
-          }
-        }
-        &:hover {
-          background-color: #EA6486;
+        @include mq('small') {
+          gap: vw-s(5);
         }
       }
-      width: vw-min(371);
-      border-radius: 40px;
-      color: #fff;
-      transition: all 0.3s;
-
-      @include mq('small') {
-        width: 50%;
+      .note {
+        @include mq('small') {
+          font-size: vw-s(10);
+          padding: 5px;
+          top: calc(-50% - 12px);
+        }
       }
-    }
-    .link {
-      width: 100%;
-      height: 100%;
-      padding: vw-min(23);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: vw-min(24);
-      font-weight: 700;
-      gap: vw-min(10);
-      &::after {
-        display: inline-block;
-        content: '';
-        background-position: center;
-        background-size: cover;
-        flex-shrink: 0;
-      }
-
+  
       @include mq('small') {
-        @include fz-s(12);
-        padding: vw-s(15);
-        gap: vw-s(10);
+        width: auto;
+        font-size: vw-s(12);
+        padding: vw-s(8) vw-s(20);
+        text-align: center;
+        border-radius: vw-s(40);
       }
     }
   }
