--- a/_src/css/common/04_modules/_footer.scss
+++ b/_src/css/common/04_modules/_footer.scss
@@ -10,11 +10,20 @@
   background: #3C3C3C;
   color: #FFFFFF;
   text-align: center;
-  padding: vw-min(86) vw-min(10) vw-min(140);
+  padding: vw-min(86) vw-min(10) vw-min(340);
+  &.is-02,
+  &.is-03 {
+    padding-bottom: vw-min(260);
+  }
 
   @include mq('small') {
     text-align: left;
-    padding: vw-s(59) vw-s(63) vw-s(110) vw-s(50);
+    padding: vw-s(59) vw-s(63) vw-s(200) vw-s(50);
+
+    &.is-02,
+    &.is-03 {
+      padding-bottom: vw-s(150);
+    }
   }
 }
 
