--- a/_src/css/common/05_index/_03_tabs.scss
+++ b/_src/css/common/05_index/_03_tabs.scss
@@ -1475,6 +1475,10 @@
               margin-left: vw-min(15);
               line-height: 1.1;
               letter-spacing: 0.1em;
+              .txt {
+                display: flex;
+                gap: 1px;
+              }
 
               @include mq('small') {
                 @include fz-s(12);
@@ -1557,7 +1561,7 @@
             &_03 {
               width: vw-min(184);
               height: vw-min(153);
-              top: vw-min(222);
+              top: vw-min(227);
               left: vw-min(19);
 
               @include mq('small') {
@@ -1570,8 +1574,8 @@
             &_04 {
               width: vw-min(159);
               height: vw-min(144);
-              top: vw-min(5);
-              right: vw-min(-10);
+              top: vw-min(220);
+              right: vw-min(29);
 
               @include mq('small') {
                 width: vw-s(117);
@@ -1766,6 +1770,10 @@
           font-weight: 400;
           line-height: 1.8;
           text-align: left;
+          .txt {
+            display: flex;
+            gap: 1px;
+          }
           a {
             text-decoration: underline;
             &:hover {
