--- a/_src/css/common/04_modules/_header.scss
+++ b/_src/css/common/04_modules/_header.scss
@@ -8,11 +8,26 @@
 
 
 .header {
-  padding: 26px 30px 25px;
+  padding: vw-min(26) vw-min(30) vw-min(25);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   background-color: #fff;
   z-index: 20;
+  &_logo {
+    width: 148px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  @include mq('small') {
+    padding: vw-s(26) vw-s(30) vw-s(25);
+    &_logo {
+      width: vw-s(148);
+    }
+  }
 }
