--- a/_src/css/common/04_modules/_header.scss
+++ b/_src/css/common/04_modules/_header.scss
@@ -8,6 +8,12 @@
 
 
 .header {
+  &.is-scale {
+    padding: vw-min(calc(26 * 0.7)) vw-min(calc(30 * 0.7)) vw-min(calc(25 * 0.7));
+    .header_logo {
+      width: vw-min(calc(148 * 0.7));
+    }
+  }
   padding: vw-min(26) vw-min(30) vw-min(25);
   position: fixed;
   top: 0;
@@ -15,8 +21,10 @@
   width: 100%;
   background-color: #fff;
   z-index: 20;
+  transition: all 0.3s;
   &_logo {
-    width: 148px;
+    width: vw-min(148);
+    transition: all 0.3s;
     img {
       width: 100%;
       height: 100%;
@@ -25,6 +33,12 @@
   }
 
   @include mq('small') {
+    &.is-scale {
+      padding: vw-s(calc(26 * 0.7)) vw-s(calc(30 * 0.7)) vw-s(calc(25 * 0.7));
+      .header_logo {
+        width: vw-s(calc(148 * 0.7));
+      }
+    }
     padding: vw-s(26) vw-s(30) vw-s(25);
     &_logo {
       width: vw-s(148);
