--- a/css/common.css
+++ b/css/common.css
@@ -1465,6 +1465,8 @@ sub {
   }
   .footer_nav_a .e-ico {
     top: 0.2544529262vw;
+    width: 5.3435114504vw;
+    height: 3.8167938931vw;
   }
   .footer_nav_a {
     font-size: 4.0712468193vw;
