--- a/_src/css/common/05_index/_03_tabs.scss
+++ b/_src/css/common/05_index/_03_tabs.scss
@@ -428,11 +428,9 @@
             }
             .price_package.is-one-col.is-gold {
               margin-top: vw-min(42);
-              margin-bottom: vw-min(5);
-
+              margin-bottom: 0;
               @include mq('small') {
                 margin-top: vw-s(42);
-                margin-bottom: vw-s(5);
               }
             }
           }
@@ -441,10 +439,7 @@
           }
           .price_package {
             &.is-red {
-              margin-bottom: vw-min(5);
-              @include mq('small') {
-                margin-bottom: vw-s(5);
-              }
+              margin-bottom: 0;
               .title {
                 background-color: #D00F31;
                 padding: vw-min(15);
@@ -591,12 +586,13 @@
             }
           }
           .price_desc {
-            font-size: vw-min(16);
-            font-weight: 600;
-            margin-bottom: vw-min(44);
+            font-size: vw-min(24);
+            font-weight: 700;
+            margin-top: vw-min(30);
+            margin-bottom: vw-min(30);
             @include mq('small') {
-              font-size: vw-s(16);
-              font-weight: 600;
+              font-size: vw-s(24);
+              margin-top: vw-s(30);
               margin-bottom: vw-s(30);
             }
           }
